# charmed_rust

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHARM_SPEC.md  Cargo.toml  EXISTING_CHARM_STRUCTURE_AND_ARCHITECTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_CHARM_TO_RUST.md  PROPOSED_RUST_CHARMED_ARCHITECTURE.md  README.md  UPGRADE_LOG.md
crates/bubbles/: Cargo.toml
crates/bubbles/benches/: bubbles_benchmarks.rs
crates/bubbles/src/: cursor.rs  filepicker.rs  help.rs  key.rs  lib.rs  list.rs  paginator.rs  progress.rs  runeutil.rs  spinner.rs  stopwatch.rs  table.rs  textarea.rs  textinput.rs  timer.rs  viewport.rs
crates/bubbles/tests/: bubbletea_integration.rs  e2e_standalone.rs  integration.rs  property_tests.rs
crates/bubbletea/: Cargo.toml
crates/bubbletea-macros/: Cargo.toml  README.md
crates/bubbletea-macros/examples/: counter_derive.rs  generic_model.rs  state_tracking.rs
crates/bubbletea-macros/src/: attributes.rs  error.rs  lib.rs  model.rs  state.rs
crates/bubbletea-macros/tests/: compile_tests.rs  state_change_detection.rs
crates/bubbletea/benches/: async_vs_threads.rs  bubbletea_benchmarks.rs
crates/bubbletea/examples/: async_fetch.rs  counter.rs  spinner.rs  textinput.rs
crates/bubbletea/src/: command.rs  key.rs  lib.rs  message.rs  mouse.rs  program.rs  screen.rs  simulator.rs
crates/bubbletea/tests/: async_lifecycle.rs  derive_model.rs  derive_model_e2e.rs  error_types.rs  property_tests.rs  terminal_io_tests.rs
crates/charmed_log/: Cargo.toml
crates/charmed_log/src/: lib.rs
crates/charmed_log/tests/: error_types.rs  formatting_tests.rs
crates/demo_showcase/: Cargo.toml  README.md  demo_docs_1769647310.txt  demo_files_1769626006.txt  demo_jobs_1769640949.txt  demo_jobs_1769645922.txt  demo_jobs_1769646111.txt  demo_jobs_1769646265.txt  demo_jobs_1769646377.txt  demo_jobs_1769646526.txt  demo_jobs_1769646846.txt  demo_jobs_1769646910.txt  demo_jobs_1769646938.txt  demo_jobs_1769647006.txt  demo_jobs_1769647086.txt  demo_jobs_1769647151.txt  demo_jobs_1769647206.txt  demo_jobs_1769647310.txt  demo_jobs_1769647354.txt  demo_jobs_1769647691.txt  demo_jobs_1769647875.txt  demo_jobs_1769648051.txt  demo_jobs_1769648080.txt  demo_logs_1769640728.txt  demo_logs_1769640933.txt  demo_logs_1769641119.txt  demo_logs_1769641592.txt  demo_logs_1769641682.txt  demo_logs_1769641683.txt  demo_logs_1769641713.txt  demo_logs_1769642681.txt  demo_logs_1769642795.txt  demo_logs_1769642808.txt  demo_logs_1769642809.txt  demo_logs_1769642922.txt  demo_logs_1769643656.txt  demo_logs_1769643754.txt  demo_logs_1769643938.txt  demo_logs_1769643939.txt  demo_logs_1769644070.txt  (+119 more)
crates/demo_showcase/assets/docs/: architecture.md  welcome.md
crates/demo_showcase/demo_showcase_exports/: logs_export_1769648080.txt  logs_full_1769646561.txt  logs_full_1769646938.txt  logs_full_1769648080.txt  viewport_1769640728.txt  viewport_1769640933.txt  viewport_1769641119.txt  viewport_1769641592.txt  viewport_1769641682.txt  viewport_1769641713.txt  viewport_1769642681.txt  viewport_1769642795.txt  viewport_1769642808.txt  viewport_1769642809.txt  viewport_1769642922.txt  viewport_1769643656.txt  viewport_1769643754.txt  viewport_1769643938.txt  viewport_1769644070.txt  viewport_1769645037.txt  viewport_1769645173.txt  viewport_1769645239.txt  viewport_1769645443.txt  viewport_1769645549.txt  viewport_1769645550.txt  viewport_1769645604.txt  viewport_1769645704.txt  viewport_1769645853.txt  viewport_1769645922.txt  viewport_1769645949.txt  viewport_1769645971.txt  viewport_1769646000.txt  viewport_1769646082.txt  viewport_1769646111.txt  viewport_1769646265.txt  viewport_1769646377.txt  viewport_1769646415.txt  viewport_1769646449.txt  viewport_1769646526.txt  viewport_1769646561.txt  (+38 more)
crates/demo_showcase/src/: app.rs  assets.rs  cli.rs  config.rs  content.rs  keymap.rs  lib.rs  main.rs  messages.rs  shell_action.rs  ssh.rs  test_support.rs  theme.rs
crates/demo_showcase/src/components/: command_palette.rs  guided_tour.rs  interaction_counter.rs  loading.rs  mod.rs  notes_modal.rs  sidebar.rs
crates/demo_showcase/src/data/: actions.rs  animation.rs  async_runner.rs  generator.rs  mod.rs  simulation.rs
crates/demo_showcase/src/pages/: dashboard.rs  docs.rs  files.rs  (+6 more)
crates/demo_showcase/tests/: docs_e2e.rs  export_tests.rs  logs_e2e.rs  mouse_e2e.rs  println_gating_tests.rs  pty_harness.rs  shell_out_e2e.rs  snapshot_tests.rs  ssh_e2e.rs
crates/glamour/: Cargo.toml  README.md
crates/glamour/benches/: glamour_benchmarks.rs
crates/glamour/examples/: syntax_highlighting.rs  theme_gallery.rs
crates/glamour/src/: lib.rs  syntax.rs  table.rs
crates/glamour/tests/: ansi_verification_tests.rs  integration_glamour_lipgloss.rs  markdown_edge_cases.rs
crates/glow/: Cargo.toml  README.md
crates/glow/src/: browser.rs  github.rs  lib.rs  main.rs
crates/glow/tests/: browser_tests.rs  e2e.rs  error_types.rs
crates/harmonica/: Cargo.toml
crates/harmonica/proptest-regressions/: spring.txt
crates/harmonica/src/: lib.rs  projectile.rs  spring.rs
crates/harmonica/tests/: physics_edge_cases.rs  property_tests.proptest-regressions
crates/huh/: Cargo.toml
crates/huh/src/: lib.rs
crates/huh/tests/: error_types.rs  property_tests.rs
crates/lipgloss/: Cargo.toml
crates/lipgloss/benches/: lipgloss_benchmarks.rs
crates/lipgloss/src/: backend.rs  border.rs  color.rs  lib.rs  position.rs  renderer.rs  style.rs  theme.rs  wasm.rs
crates/lipgloss/tests/: ansi_output_tests.rs  layout_and_ranges_tests.rs  layout_property_tests.rs  property_tests.proptest-regressions
crates/wish/: Cargo.toml  README.md
crates/wish/examples/: authenticated_server.rs  echo_server.rs  middleware_example.rs
crates/wish/src/: handler.rs  lib.rs
crates/wish/tests/: error_types.rs  types_and_session_tests.rs
examples/: Cargo.toml  README.md
tests/conformance/: Cargo.toml
tests/conformance/crates/: mod.rs
tests/conformance/go_reference/: go.mod  go.sum
tests/conformance/integration/: mod.rs
tests/conformance/src/: benchmark_e2e.rs  benchmark_validation.rs  error_e2e.rs  lib.rs
(+109 files in other folders)
