[package]
name = "bubbletea-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Procedural macros for bubbletea TUI framework"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
proc-macro-error2 = "2.0"

[dev-dependencies]
trybuild = "1.0"
bubbletea = { path = "../bubbletea", features = ["macros"] }

[lints]
workspace = true
