[package]
name = "charmed_log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Beautiful, colorful logging for terminal applications"

[dependencies]
lipgloss = { path = "../lipgloss" }
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
