[package]
name = "glamour"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stylesheet-based markdown rendering for terminal applications"

[dependencies]
lipgloss = { path = "../lipgloss" }
pulldown-cmark = "0.13"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "glamour_benchmarks"
harness = false

[lints]
workspace = true
