[package]
name = "glamour"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stylesheet-based markdown rendering for terminal applications"

[dependencies]
lipgloss = { path = "../lipgloss" }
pulldown-cmark = "0.13"

[features]
default = []
syntax-highlighting = []

[dev-dependencies]
criterion.workspace = true
stats_alloc = "0.1.10"

[[bench]]
name = "glamour_benchmarks"
harness = false

[lints]
workspace = true
