[package]
name = "glamour"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stylesheet-based markdown rendering for terminal applications"

[dependencies]
lipgloss = { path = "../lipgloss" }
pulldown-cmark = "0.13"

# Optional: syntax highlighting
# Uses fancy-regex (pure Rust) instead of onig for WASM compatibility
# See docs/SYNTAX_HIGHLIGHTING_RESEARCH.md for rationale
syntect = { version = "5", optional = true, default-features = false, features = [
    "default-fancy",  # Pure Rust regex engine (WASM compatible)
] }

# Optional: serialization support
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
# Enable syntax highlighting for code blocks. Adds ~2MB to binary size
# due to embedded syntax definitions.
syntax-highlighting = ["dep:syntect"]
# Enable serde serialization for configuration types
serde = ["dep:serde"]

[dev-dependencies]
criterion.workspace = true
stats_alloc = "0.1.10"

[[bench]]
name = "glamour_benchmarks"
harness = false

[lints]
workspace = true
