[package]
name = "glow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Render markdown on the command line with style"

[features]
default = []
github = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:directories"]

[dependencies]
glamour = { path = "../glamour" }
bubbletea = { path = "../bubbletea" }
lipgloss = { path = "../lipgloss" }
bubbles = { path = "../bubbles" }
clap = { version = "4.4", features = ["derive"] }
thiserror.workspace = true
unicode-width.workspace = true

# GitHub feature dependencies
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
directories = { version = "6.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
