[package]
name = "lipgloss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Style definitions for terminal applications with support for colors, borders, and layout"

[dependencies]
crossterm = "0.29"
unicode-width = "0.1"
colored = "2.1"
bitflags = "2.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lipgloss_benchmarks"
harness = false

[lints]
workspace = true

[features]
yaml = ["serde_yaml"]
