[package]
name = "lipgloss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Style definitions for terminal applications with support for colors, borders, and layout"

[dependencies]
# Core dependencies (always included)
unicode-width = "0.1"
bitflags = "2.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional dependencies
serde_yaml = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }

# Native-only dependencies (not needed for WASM)
crossterm = { version = "0.29", optional = true }
colored = { version = "2.1", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lipgloss_benchmarks"
harness = false

[lints]
workspace = true

[features]
# Default includes native terminal support
default = ["native"]

# Native terminal support (crossterm, colored, env vars, file I/O)
native = ["dep:crossterm", "dep:colored"]

# YAML serialization support
yaml = ["serde_yaml"]

# Async support with tokio
tokio = ["dep:tokio"]
